--- a/backend-migrators/package.json
+++ b/backend-migrators/package.json
@@ -14,18 +14,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.14",
-    "db-migrate-mssql": "^2.1.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
+    "express-session": "^1.18.2",
+    "express-validator": "^7.2.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mssql": "^10.0.2",
+    "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "uuid": "^10.0.0",
