--- a/front-migrators/package.json
+++ b/front-migrators/package.json
@@ -26,19 +26,22 @@
     "dompurify": "^3.2.4",
     "dotenv": "^16.4.7",
     "flag-icon-css": "^4.1.7",
+    "flag-icons": "^7.5.0",
     "flowbite": "^3.1.2",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lodash.throttle": "^4.1.1",
     "markdown-it": "^14.1.0",
     "pinia": "^3.0.3",
     "remove-accents": "^0.5.0",
-    "sweetalert2": "^11.22.0",
+    "sweetalert2": "^11.6.13",
     "v-click-outside": "^3.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vue3-apexcharts": "^1.8.0"
+    "vue3-apexcharts": "^1.8.0",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
